--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,3 +1,7 @@
 /* start custom scss snippet */
-
+/* 让所有文章内容的图片居中显示 */
+// .article-content img {
+//   display: block;
+//   margin: 0 auto;
+// }
 /* end custom scss snippet */
